# vscode-py-template

./: .gitignore  .style.yapf  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-discord-noti.yml  notification.yml
myproject/: GUIDELINE.md  log_utils.py  logging.yaml
myproject/subpackage/: hello.py
project/subpackage/: test_hello.py
